Fixing the non-wrapping issue of the layout title

--- a/components/Pages/LuggageAccessories/LuggageAccessories.module.scss
+++ b/components/Pages/LuggageAccessories/LuggageAccessories.module.scss
@@ -1,5 +1,5 @@
 .luggage-accessories-title-section {
-    height: 20vh;
+    height: 23vh;
     .logo-img {
         height: 45px;
         position: absolute;
